# gifttax

./: .env.deploy.example  .gitignore  .mise.toml  AGENTS.md  Dockerfile  PDF_REPORT_SPEC.md  README.md  TAX_ENGINE.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/: __init__.py  main.py
backend/api/: router.py
backend/integrations/scraper/: __init__.py  smbs.py  yahoo.py
backend/models/: __init__.py
backend/pdf/generator/: common.py  excel.py  exchange_rate_pdf.py  gift_calculation_pdf.py  pdf.py
backend/services/: calculator.py
backend/tax/: engine.py
backend/tests/: conftest.py  test_date_calculation.py  test_gift_calculation_pdf.py  test_gifttax.py
docs/: SELF_HOSTED_RUNNER.md
frontend/: app.js  index.html  style.css
nginx/: default.conf  default.conf.template
stocktax/: main.py
stocktax/models/: __init__.py
stocktax/services/: calculator.py
stocktax/services/generator/: excel.py  pdf.py
stocktax/services/scraper/: __init__.py  investing.py
tests/: test_date_calculation.py  test_stocktax.py
